test/Fail/Issue4752.err
Issue4752.agda:11.1-29: error: [AsPatternInPatternSynonym]
@-patterns are not allowed in pattern synonyms
when scope checking the declaration
  pattern ss x = suc x@(suc _)
